Makefile.am: don't install cron as setuid.
Setuid scripts are disabled on most systems anyway. Also cron refuses to run
if the real user id isn't 0, so there's no point in it being setuid
anyway. Also also, no attempt at controlling the environment has been made, so
even if the symlink race conditions that make setuid scripts vulnerable were
resolved, it would still be unsafe.

--- a/Makefile.am
+++ b/Makefile.am
@@ -168,8 +168,7 @@ install-exec-hook:
 if MULTI_USER
 	tcrontab=`echo crontab | sed '$(transform_exe)'`; \
 	chmod u+s $(DESTDIR)$(bindir)/$${tcrontab}
-	tcron=`echo cron | sed '$(transform_exe)'`; \
-	chmod u+s $(DESTDIR)$(sbindir)/$${tcron}
+	tcron=`echo cron | sed '$(transform_exe)'`;
 endif
 	tmcron=`echo mcron | sed '$(transform_exe)'`;
 
